# minifram

./: .env.example  .gitignore  CLAUDE.md  README.md  README_GLM.md  README_MCP_TESTING.md  README_OpenAI_OSS.md  SPEC.md  SPEC_AGENT_MCP.md  SPEC_BLACKJACK_MCP.md  SPEC_original.md  mcp_config.json  mcp_config.json.example  notes.txt  pyproject.toml
.claude/: settings.local.json
scripts/: ollama-serve.sh  ollama-start.sh  ollama-stop.sh
src/: __init__.py
src/agents/: __init__.py  handler.py  mcp_server.py  state.py
src/foundation/: __init__.py  reasoning.py  server.py  state.py
src/foundation/static/: app.js  index.html  style.css
src/mcp/: blackjack_server.py  hello_server.py
src/models/: __init__.py  llm_client.py
src/static/: app.js  style.css
src/tools/: __init__.py  mcp_client.py  tool_manager.py
